--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -59,4 +59,17 @@
         android:textSize="13dp"
          />
 
+    <Button
+        android:id="@+id/btn_signout"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/button_shape"
+        android:fontFamily="@font/prstartk"
+        android:onClick="openLeaderboard"
+        android:text="Sign Out"
+        android:textColor="@android:color/white"
+        android:textSize="13dp"
+        />
+
 </LinearLayout>
