--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/custom_edit_text"
         android:ems="5"
         android:fontFamily="@font/pokemon"
-        android:maxLength="10"
+        android:maxLength="30"
         android:padding="15dp"
         android:textSize="12dp"
         android:hint="Username"
@@ -40,7 +40,7 @@
         android:background="@drawable/custom_edit_text"
         android:ems="5"
         android:fontFamily="@font/pokemon"
-        android:maxLength="10"
+        android:maxLength="30"
         android:padding="15dp"
         android:textSize="12dp"
         android:hint="Password"/>
@@ -54,8 +54,7 @@
             android:fontFamily="@font/prstartk"
             android:text="Login"
             android:textSize="13dp"
-            android:textColor="@android:color/white"
-            android:onClick="login"/>
+            android:textColor="@android:color/white"/>
 
     <Button
         android:id="@+id/btn_google_signin"
