--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,10 +28,10 @@
         android:background="@drawable/custom_edit_text"
         android:ems="5"
         android:fontFamily="@font/pokemon"
-        android:maxLength="10"
+        android:maxLength="30"
         android:padding="15dp"
         android:textSize="12dp"
-        android:hint="Username"
+        android:hint="Email"
         android:layout_margin="5dp"/>
 
     <EditText
@@ -41,7 +41,7 @@
         android:background="@drawable/custom_edit_text"
         android:ems="5"
         android:fontFamily="@font/pokemon"
-        android:maxLength="10"
+        android:maxLength="30"
         android:padding="15dp"
         android:textSize="12dp"
         android:hint="Password"/>
