--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -23,7 +23,9 @@
             android:layout_height="90dp"
             android:layout_centerInParent="true"
             android:gravity="top"
-            android:onClick="openUserDialog"/>
+            android:onClick="openUserDialog"
+            app:civ_border_color="#71db77"
+            app:civ_border_width="2dp"/>
 
         <TextView
             android:id="@+id/txt_username"
