--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -216,16 +216,17 @@
             android:textColor="#0E450D" />
 
         <TextView
-            android:id="@+id/points"
+            android:id="@+id/txt_points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/bungee"
-            android:textSize="15dp"
             android:gravity="right"
+            android:inputType="numberSigned"
             android:padding="10dp"
             android:text="TextView"
-            android:textColor="#0E450D" />
+            android:textColor="#0E450D"
+            android:textSize="15dp" />
     </LinearLayout>
 
 </LinearLayout>
