--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -48,7 +48,7 @@
             android:background="@drawable/button_shape"
             android:fontFamily="@font/bungee"
             android:onClick="startGame"
-            android:text="New Game"
+            android:text="Story Mode"
             android:textColor="@android:color/white"
             android:textSize="15dp" />
 
