--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -46,19 +46,19 @@
             android:layout_weight="1"
             android:textSize="15dp"/>
 
-        <Button
-            android:id="@+id/btn_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@drawable/button_shape"
-            android:fontFamily="@font/bungee"
-            android:text="Save"
-            android:textColor="@android:color/white"
-            android:onClick="saveCustomDeck"
-            android:layout_weight="1"
-            android:textSize="15dp"/>
+<!--        <Button-->
+<!--            android:id="@+id/btn_save"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:background="@drawable/button_shape"-->
+<!--            android:fontFamily="@font/bungee"-->
+<!--            android:text="Save"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:onClick="saveCustomDeck"-->
+<!--            android:layout_weight="1"-->
+<!--            android:textSize="15dp"/>-->
 
 
         <Button
